                        SpliceHack -- Changelog

A full list of differences in SpliceHack from vanilla NetHack can be found on
the wiki. This file documents the changes in each version of SpliceHack.

                            Version 4.0

Patches
- Implemented a heavily modified version of the descriptive hit messages patch
  by L, and combined it with SpliceHack's existing monk hit messages.
- Changes from NetHack 3.6.2B were pulled into the game.
- Chris's Pirate patch was implemented, thus adding the pirate role to the game.
  Updating this to be compatible with 3.6.1 took quite a bit of work, so for
  those trying to add it to 3.6.1 I would recommend looking at what I did here.
- Added the Black Market from Unnethack/SLASHEM, using the code in Unnethack.
  The market functions largely the same as the one in SLASHEM, although there
  are a few small differences due to porting the code from 3.4.3 to 3.6.x
  (see below).
- Implemented an altered version of the colored walls and floors patch by L.
  Only walls are colored, and the Valley of the Dead is not in grayscale. In
  addition, some branches have new wall colors.

QOL Changes
- Dropped the quest entry requirement to level 10.
- Ported paranoid trap and swim confirmation from xnethack.
- Ported peaceful monster displacement from xnethack.
- Ported NAO 3.4.3's hilite_hidden_stairs option to 3.6.x and SpliceHack.
  Defaults to true.
- Artifact wishing is based on the number of artifacts wished for, not
  generated, preventing the increased  number of artifacts from nerfing artifact
  wishing.
- The vibrating square can now be teleported onto directly (YANI by Mandevil)

Balance Changes
- Vlad now  has a slowing attack.
- Nerfed Lord of the Foocubi and Will-o'-the-wisps after player feedback.
- Only dragons can randomly roar now, as opposed to any monster with MS_ROAR.
- Reduced the number of marids and giant eels on the plane of water.
- Monsters can only get wishes from smoky potions now, not wands of